fix: text align tag h2

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -223,7 +223,6 @@
   .reviews {
     padding: 9.5% 0 12.81%;
     h2 {
-      text-align:    center;
       margin-bottom: 5.7%;
     }
     &-slider {
